--- a/Lab WEB/index.html
+++ b/Lab WEB/index.html
@@ -6,13 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mati</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 
 <body>
   <header>
 
     <div class="logo">
-      <h2>Ładowarkomania</h2>
+      <h2 id="naglowek">Ładowarkomania</h2>
       <svg width="100">
         <circle cs="50" cy="50" r="20" fill="blue"></circle>
       </svg>
@@ -152,12 +153,21 @@
           <li><a href="#reklama">Reklama</a></li>
           <li><a href="Kontakt">Kontakt</a></li>
         </ul>
-      </nav>
+        <div>
+          <span id="fullnazwa"></span>
+          <span id="nip"></span>
+          <span id="adres"></span>
+          <span id="kraj"></span>
+        </div>
+
+     
+    </nav>
     </aside>
   </div>
   <footer >
-    <p>Copyright &copy; MI</p>
+    <p>Copyright &copy; 2019 - <span id="year"></span> MI</p>
   </footer>
+  
 </body>
 
 </html>
