--- a/Lab WEB/index.html
+++ b/Lab WEB/index.html
@@ -23,11 +23,11 @@
     <aside>
       <nav>
         <ul>
-          <li><a href="test.html">Strona główna</a></li>
-          <li><a href="test.html">Lokalizacje</a></li>
-          <li><a href="test.html">Aplikacja mobilna</a></li>
-          <li><a href="test.html">Abonamenty</a></li>
-          <li><a href="test.html">Rejestracja</a></li>
+          <li><a href="index.html">Strona główna</a></li>
+          <li><a href="index.html">Lokalizacje</a></li>
+          <li><a href="index.html">Aplikacja mobilna</a></li>
+          <li><a href="index.html">Abonamenty</a></li>
+          <li><a href="index.html">Rejestracja</a></li>
         </ul>
 
       </nav>
