Extended file reading

--- a/Lab_WEB/index.html
+++ b/Lab_WEB/index.html
@@ -11,7 +11,6 @@
 
 <body>
   <header>
-    <h1>dupa</h1>
     <div class="logo">
       <h2 id="naglowek">Ładowarkomania</h2>
       <svg width="100">
@@ -48,7 +47,7 @@
             </tr>
           </thead>
           <tbody id="mytable">
-            
+            <script>{}</script>
           </tbody>
         </table>
       </section>
