--- a/Lab_WEB/index.html
+++ b/Lab_WEB/index.html
@@ -19,19 +19,9 @@
     </div>
   </header>
   <div>
-    <aside>
-      <nav>
-        <ul>
-          <li><a href="index.html">Strona główna</a></li>
-          <li><a href="index.html">Lokalizacje</a></li>
-          <li><a href="index.html">Aplikacja mobilna</a></li>
-          <li><a href="index.html">Abonamenty</a></li>
-          <li><a href="index.html">Rejestracja</a></li>
-        </ul>
-
-      </nav>
-    </aside>
-
+    <div class="language"></div>
+    <div class="menu"></div>
+    
     <main>
       Potrzeboujesz się naładowac? Odwiedź nas!
       <section id="cennik">
